--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -112,5 +112,40 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/three" />
+    </LinearLayout> <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/speed_up"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="speed_up"
+            android:text="变速不变调"
+            />
+
+        <Button
+            android:id="@+id/pitch_up"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="pitch_up"
+            android:text="变调不变速"
+             />
+
+        <Button
+            android:id="@+id/speed_pitch_up"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="speed_pitch_up"
+            android:text="变速变调"
+           />
+
+    <Button
+            android:id="@+id/normal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="normal"
+            android:text="正常"
+           />
     </LinearLayout>
 </LinearLayout>
